force-app/main/default/objects/Problem__c/Problem__c.object-meta.xml
<CustomObject>
    <label>Problem</label>
    <nameField>
        <label>Problem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>