force-app/main/default/objects/Problem__c/fields/Is_Select_Multiple_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Select_Multiple_Question__c</fullName>
    <formula>Select_Multiple_Answers__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Select Multiple Question</label>
    <type>Checkbox</type>
</CustomField>