force-app/main/default/objects/Problem__c/fields/OpenAI_Log__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpenAI Log</label>
    <referenceTo>OpenAI_Log__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>