force-app/main/default/objects/Problem__c/fields/Problem_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Problem_Auto_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>Problem #</label>
    <type>AutoNumber</type>
</CustomField>