force-app/main/default/objects/Problem__c/fields/Problem_HTML__c.field-meta.xml
<CustomField>
    <fullName>Problem_HTML__c</fullName>
    <label>Problem HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>