force-app/main/default/objects/Problem__c/fields/Problem_Number__c.field-meta.xml
<CustomField>
    <fullName>Problem_Number__c</fullName>
    <label>Problem Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>