force-app/main/default/objects/Problem__c/fields/Select_Multiple_Answers__c.field-meta.xml
<CustomField>
    <fullName>Select_Multiple_Answers__c</fullName>
    <label>Select Multiple Answers</label>
    <summaryFilterItems>
        <field>Answer__c.Solution__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.Problem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>