force-app/main/default/objects/Problem__c/fields/Solution_HTML__c.field-meta.xml
<CustomField>
    <fullName>Solution_HTML__c</fullName>
    <label>Solution HTML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>