force-app/main/default/objects/Problem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Problem_Auto_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Question__c</columns>
    <columns>Trial__c</columns>
    <columns>Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>